syntax= "proto3";

package pb;

option go_package = "ebpf_loader/internal/grpc/pb;pb";


message EbpfEvent {
  uint32 pid = 1;
  uint32 uid = 2;
  string comm = 3;
  string filename = 4;
  int64 return_code = 6;
  uint64 timestamp_ns = 7;
  uint64 timestamp_ns_exit = 8;
  uint64 latency_ns = 9;
  string event_type = 10;
  string node_name = 11;
  string user = 12;
  uint32 ppid =13;
  uint32 gid = 14;
  uint64 cgroup_id = 15;
  string cgroup_name = 16;
  uint32 user_pid = 17;
  uint32 user_ppid = 18;
  int64 timestamp_unix_ms = 19;
  string container_id = 20;
  string container_image = 21;
  map<string,string> container_labels_json=22; 
}


message CollectorAck {
  string status = 12;
  string message = 13;
}

service EventCollector {
  rpc SendEvents(stream EbpfEvent) returns (CollectorAck);
}
